k8s/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srinath-tech-service
spec:
  selector:
    app: srinath-tech
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
