k8s/website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: srinath.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srinath-tech-service
            port:
              number: 3000
  tls:
  - hosts:
    - srinath.tech
    secretName: tls-secret
